rust-core/build_check_new.txt
cargo :     Checking superbook-pdf v0.1.0 (C:\Users\sfuru\Documents\Rust_DN_Sup
erBook_PDF_Converter\rust-core)
発生場所 行:1 文字:132
+ ... .cargo\bin;C:\msys64\mingw64\bin;$env:PATH"; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking su...rter\rust-core) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: `std::result::Result<OcrResult, YomiTokuError>` is not a future
   --> src\markdown_pipeline.rs:307:61
    |
307 |                 match yt.ocr(image_path, &yomitoku_options).await {
    |                                                             ^^^^^ `std::r
esult::Result<OcrResult, YomiTokuError>` is not a future
    |
    = help: the trait `Future` is not implemented for `std::result::Result<OcrR
esult, YomiTokuError>`
    = note: std::result::Result<OcrResult, YomiTokuError> must be a future or m
ust implement `IntoFuture` to be awaited
    = note: required for `std::result::Result<OcrResult, YomiTokuError>` to imp
lement `IntoFuture`
help: remove the `.await`
    |
307 -                 match yt.ocr(image_path, &yomitoku_options).await {
307 +                 match yt.ocr(image_path, &yomitoku_options) {
    |

error[E0277]: `std::result::Result<AiTaskResult, AiBridgeError>` is not a futur
e
   --> src\yomitoku.rs:341:14
    |
341 |             .await // 驥崎ｦ・ｼ壹％縺薙〒髱槫酔譛溷ｮ溯｡後ｒ蠕・ｩ・    |              ^^^^^ `s
td::result::Result<AiTaskResult, AiBridgeError>` is not a future
    |
    = help: the trait `Future` is not implemented for `std::result::Result<AiTa
skResult, AiBridgeError>`
    = note: std::result::Result<AiTaskResult, AiBridgeError> must be a future o
r must implement `IntoFuture` to be awaited
    = note: required for `std::result::Result<AiTaskResult, AiBridgeError>` to 
implement `IntoFuture`
help: remove the `.await`
    |
341 -             .await // 驥崎ｦ・ｼ壹％縺薙〒髱槫酔譛溷ｮ溯｡後ｒ蠕・ｩ・341 +              // 驥崎ｦ・ｼ
壹％縺薙〒髱槫酔譛溷ｮ溯｡後ｒ蠕・ｩ・    |

error[E0282]: type annotations needed
   --> src\yomitoku.rs:333:23
    |
333 |           let _result = self
    |  _______________________^
334 | |             .bridge
335 | |             .execute(
336 | |                 AiTool::YomiToku,
...   |
341 | |             .await // 驥崎ｦ・ｼ壹％縺薙〒髱槫酔譛溷ｮ溯｡後ｒ蠕・ｩ・    | |__________________
^ cannot infer type

error[E0282]: type annotations needed
   --> src\yomitoku.rs:342:23
    |
342 |             .map_err(|e| YomiTokuError::ExecutionFailed(e.to_string()))?;
 // 繧ｨ繝ｩ繝ｼ繧貞､画鋤
    |                       ^                                 - type must be kn
own at this point
    |
help: consider giving this closure parameter an explicit type
    |
342 |             .map_err(|e: /* Type */| YomiTokuError::ExecutionFailed(e.to_
string()))?; // 繧ｨ繝ｩ繝ｼ繧貞､画鋤
    |                        ++++++++++++

warning: unused import: `crate::ai_bridge::AiBridge`
  --> src\markdown_pipeline.rs:18:5
   |
18 | use crate::ai_bridge::AiBridge;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::ai_bridge::AiBridge`
  --> src\realesrgan.rs:32:5
   |
32 | use crate::ai_bridge::AiBridge;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: future cannot be sent between threads safely
   --> src\ai_bridge.rs:810:5
    |
810 |     async fn execute(
    |     ^^^^^ future created by async block is not `Send`
    |
    = help: the trait `Sync` is not implemented for `dyn Any`
note: captured value is not `Send` because `&` references cannot be sent unless
 their referent is `Sync`
   --> src\ai_bridge.rs:849:45
    |
849 |                         if let Some(opts) = tool_options.downcast_ref::<c
rate::RealEsrganOptions>() {
    |                                             ^^^^^^^^^^^^ has type `&dyn A
ny` which is not `Send`, because `dyn Any` is not `Sync`
    = note: required for the cast from `Pin<Box<{async block@src\ai_bridge.rs:8
10:5: 810:10}>>` to `Pin<Box<dyn Future<Output = std::result::Result<AiTaskResu
lt, AiBridgeError>> + Send>>`

Some errors have detailed explanations: E0277, E0282.
For more information about an error, try `rustc --explain E0277`.
warning: `superbook-pdf` (lib) generated 2 warnings
error: could not compile `superbook-pdf` (lib) due to 5 previous errors; 2 warn
ings emitted
